--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -97,3 +97,41 @@
     transition: 0.1s;
   }
   
+
+  @media screen and (max-width: 920px) {
+    .searchbar_input {
+        width: 300px;
+        padding: 10px;
+    }
+  }
+  
+  @media screen and (max-width: 760px) {
+    .searchbar_input {
+        width: 250px;
+        padding: 10px;
+    }
+  
+    .main__header_wrap {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+  
+    .searchBar {
+        margin: 0px 0px 30px 0px;
+    }
+  
+    .company_details {    
+        font-size: 12px;
+    }
+
+   
+  } 
+
+  @media screen and (max-width: 530px) {
+    .scrollBar1 {
+      width: 120px;
+    }
+  }
+  
+  
